--- a/main-files/assets/scss/_footer.scss
+++ b/main-files/assets/scss/_footer.scss
@@ -91,26 +91,38 @@
 }
 
 .footer-3 {
-  padding-top: 120px ;
-	@include breakpoint(max-xl){
-		padding-top: 100px 0;
-	}
-	@include breakpoint(max-lg){
-		padding-top: 80px 0;
-	}
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding-top: 120px;
+  @include breakpoint(max-xl) {
+    padding-top: 100px 0;
+  }
+  @include breakpoint(max-lg) {
+    padding-top: 80px 0;
+  }
   padding-bottom: 0;
-  background-color: $footer-3;
   color: $white;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  &-contact{
+  &-contact {
     display: flex;
     align-items: center;
     gap: 20px;
 
-    div.icon{
+    div.icon {
       width: 50px;
       height: 50px;
       display: flex;
@@ -119,14 +131,14 @@
       border: #dadada solid 1px;
       border-radius: 8px;
 
-      i{
+      i {
         font-size: 20px;
         color: #dadada;
       }
     }
 
-    div.content{
-      span{
+    div.content {
+      span {
         font-size: 25px;
         font-weight: 500;
         color: $theme-color-2;
@@ -134,11 +146,11 @@
     }
   }
 
-  &-social-wrapper{
+  &-social-wrapper {
     display: flex;
     gap: 10px;
 
-    a{
+    a {
       width: 35px;
       height: 35px;
       display: flex;
@@ -149,17 +161,16 @@
       transition: all 0.3s ease;
       border: 1px solid $white;
 
-      &:hover{
+      &:hover {
         &:hover i {
           color: #e11d48;
         }
       }
 
-      i{
+      i {
         font-size: 16px;
         color: $theme-color-2;
       }
     }
   }
 }
-
