--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -565,13 +565,36 @@ span {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+.about-3-heading {
+  margin-left: -100px;
+  background: var(--white);
+  margin-top: 30px;
+  padding: 20px;
+}
 .about-3-list {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 .about-3-list-icon {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-left: -50px;
+  padding: 20px;
+}
+.about-3-list p {
+  padding-left: 15px;
+}
+.about-3-start-btn {
+  background: var(--theme);
+  color: var(--white);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+.about-3 .key-features-3 {
+  padding-left: 15px;
+}
+.about-3 .key-features-3 div div div {
+  background: #e0f2fe;
 }
 
 @-webkit-keyframes rippleOne {
@@ -6644,7 +6667,7 @@ span {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  margin-top: 20px;
+  padding-left: 15px;
 }
 .counter-wrapper-3 .counter-box-3 {
   width: 100%;
@@ -6805,9 +6828,12 @@ span {
   padding: 20px 30px;
   background-color: var(--theme);
   border-radius: 20px;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   color: var(--white);
+}
+.home-car-details-3 .checked {
+  color: orange;
 }
 
 /*# sourceMappingURL=main.css.map */
