--- a/main-files/assets/scss/_counter.scss
+++ b/main-files/assets/scss/_counter.scss
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  margin-top: 20px;
+  padding-left: 15px;
 
   .counter-box-3 {
     width: 100%;
