--- a/main-files/assets/scss/_home_car.scss
+++ b/main-files/assets/scss/_home_car.scss
@@ -51,9 +51,13 @@
       padding: 20px 30px;
       background-color: $theme-color;
       border-radius: 20px;
-      font-size: 30px;
+      font-size: 20px;
       font-weight: 600;
       color: $white;
     }
+  }
+
+  .checked {
+    color: orange;
   }
 }
