--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -6037,6 +6037,92 @@ span {
   border-radius: 12px;
 }
 
+.cart-wrapper-2 {
+  width: 100%;
+}
+.cart-wrapper-2 .cart-item {
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border-radius: 2.5px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.cart-wrapper-2 .cart-item .cart-item-image {
+  max-width: 150px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
+}
+.cart-wrapper-2 .cart-item .cart-item-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.cart-wrapper-2 .cart-item .cart-item-money {
+  font-size: 16px;
+}
+.cart-wrapper-2 .cart-item .cart-item-money div p {
+  line-height: 22px;
+}
+.cart-wrapper-2 .cart-item .cart-item-money div p:nth-child(1) {
+  font-size: 18px;
+  font-weight: 500;
+}
+.cart-wrapper-2 .cart-item .cart-item-money .old-price {
+  text-decoration: line-through;
+}
+.cart-wrapper-2 .cart-item .cart-item-money button {
+  color: #94a3b8;
+}
+.cart-wrapper-2 .cart-item .cart-item-input button {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border: 1px solid #f1f5f9;
+  color: var(--header);
+  background-color: #e2e8f0;
+}
+.cart-wrapper-2 .cart-item .cart-item-input button i {
+  font-size: 16px;
+  color: #94a3b8;
+}
+.cart-wrapper-2 .cart-item .cart-item-input input {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid var(--border);
+  color: var(--header);
+}
+.cart-wrapper-2 .cart-details-card {
+  background-color: var(--white);
+  padding: 15px;
+  position: sticky;
+  top: 0;
+}
+.cart-wrapper-2 .cart-details-card input {
+  padding: 8px !important;
+  font-size: 15px !important;
+  border: 1px solid #cbd5e1;
+}
+.cart-wrapper-2 .cart-details-card button {
+  border-radius: 0;
+  padding: 8px 20px !important;
+  background-color: var(--theme);
+  font-size: 16px !important;
+}
+.cart-wrapper-2 .cart-details-card button::placeholder {
+  font-size: 16px;
+  font-weight: normal;
+}
+.cart-wrapper-2 .cart-details-card #total-price {
+  color: var(--theme);
+  font-weight: 500;
+}
+
 .car-box-items {
   margin-top: 30px;
   padding: 20px;
