--- a/main-files/assets/scss/_shop.scss
+++ b/main-files/assets/scss/_shop.scss
@@ -1419,6 +1419,13 @@
     }
 
     .cart-item-input {
+      display: flex;
+      gap: 5px;
+      flex-direction: column;
+      @include breakpoint(md){
+        flex-direction: row;
+      }
+
       button {
         width: 40px;
         height: 40px;
