--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -76,5 +76,7 @@ Version: 1.0.0
 @import "_seller";
 //>> Home Car Details <<//
 @import "_home_car";
+//>> User Dashboard <<//
+@import "user-dashboard";
 
 //>> Template Section Style End <<//
