--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -13,10 +13,14 @@ Version: 1.0.0
   --black: #000;
   --white: #fff;
   --theme: #4376fb;
+  --theme-fade: #4377fb21;
   --theme2: #ffbf25;
   --header: #000000;
   --text: #555555;
+  --text-2: #0a111e;
+  --text-fade: #5f5f5f;
   --border: #d5d5d5;
+  --border-2: #e6e6e6;
   --bg: #f4f6fa;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
@@ -7006,6 +7010,39 @@ span {
 }
 .home-car-details-3 .checked {
   color: orange;
+}
+
+.user-dashboard-wrapper .left-side {
+  width: 100%;
+  background: transparent;
+  border: 1px solid var(--border-2);
+  border-radius: 8px;
+}
+.user-dashboard-wrapper .left-side p {
+  font-weight: 500;
+  font-size: 20;
+  color: var(--text-2);
+  padding: 14px 20px;
+}
+.user-dashboard-wrapper .left-side .navigation-list li a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+  padding: 14px 0px;
+  color: var(--text-fade) !important;
+  padding: 14px 20px;
+  font-weight: light;
+}
+.user-dashboard-wrapper .left-side .navigation-list li a i {
+  font-size: 18px;
+}
+.user-dashboard-wrapper .left-side .navigation-list li.active a {
+  color: var(--text-2) !important;
+  background-color: var(--theme-fade);
+}
+.user-dashboard-wrapper .left-side .navigation-list li.active {
+  border-left: 3px solid var(--theme);
 }
 
 /*# sourceMappingURL=main.css.map */
