--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -7044,6 +7044,10 @@ span {
 .user-dashboard-wrapper .left-side .navigation-list li.active {
   border-left: 3px solid var(--theme);
 }
+.user-dashboard-wrapper .right-side {
+  display: grid;
+  gap: 24px;
+}
 .user-dashboard-wrapper .right-side .top {
   width: 100%;
   display: flex;
@@ -7158,6 +7162,71 @@ span {
   text-decoration-skip-ink: none;
   color: var(--theme);
   margin-top: 20px;
+}
+.user-dashboard-wrapper .right-side .bottom {
+  padding: 16px 0;
+  border-radius: 8px;
+  border: 1px solid var(--border-2);
+}
+.user-dashboard-wrapper .right-side .bottom .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 24px 16px;
+}
+.user-dashboard-wrapper .right-side .bottom .header h5 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--text-2);
+}
+.user-dashboard-wrapper .right-side .bottom .header a {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--theme);
+  transition: all 0.3s ease;
+}
+.user-dashboard-wrapper .right-side .bottom .header a:hover {
+  text-decoration: underline;
+}
+.user-dashboard-wrapper .right-side .bottom table .table-head th {
+  padding: 16px 24px !important;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 12px;
+  letter-spacing: 0.03em;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  text-transform: uppercase;
+  color: #4d4d4d;
+  background-color: var(--theme-fade);
+}
+.user-dashboard-wrapper .right-side .bottom table tbody td {
+  padding: 12px 24px !important;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #333;
+}
+.user-dashboard-wrapper .right-side .bottom table tbody td a.view-details {
+  color: var(--theme);
+  font-weight: 500;
+  transition: all 0.3s ease;
+  font-size: 14px;
+}
+.user-dashboard-wrapper .right-side .bottom table tbody td a.view-details:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=main.css.map */
