--- a/main-files/assets/scss/_user-dashboard.scss
+++ b/main-files/assets/scss/_user-dashboard.scss
@@ -40,6 +40,9 @@
   }
 
   .right-side {
+    display: grid;
+    gap: 24px;
+
     .top {
       width: 100%;
       display: flex;
@@ -165,6 +168,86 @@
           text-decoration-skip-ink: none;
           color: $theme-color;
           margin-top: 20px;
+        }
+      }
+    }
+
+    .bottom {
+      padding: 16px 0;
+      border-radius: 8px;
+      border: 1px solid $border-color-2;
+
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0px 24px 16px;
+
+        h5 {
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 30px;
+          text-align: left;
+          text-underline-position: from-font;
+          text-decoration-skip-ink: none;
+          color: $text-color-2;
+        }
+
+        a {
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 24px;
+          text-align: left;
+          text-underline-position: from-font;
+          text-decoration-skip-ink: none;
+          color: $theme-color;
+          transition: all 0.3s ease;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+
+      table {
+        .table-head {
+          th {
+            padding: 16px 24px !important;
+            font-size: 12px;
+            font-weight: 500;
+            line-height: 12px;
+            letter-spacing: 0.03em;
+            text-align: left;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+            text-transform: uppercase;
+            color: #4d4d4d;
+            background-color: $theme-fade;
+          }
+        }
+
+        tbody {
+          td {
+            padding: 12px 24px !important;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 21px;
+            text-align: left;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+            color: #333;
+
+            a.view-details {
+              color: $theme-color;
+              font-weight: 500;
+              transition: all 0.3s ease;
+              font-size: 14px;
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
         }
       }
     }
