--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -77,6 +77,7 @@ Version: 1.0.0
 //>> Home Car Details <<//
 @import "_home_car";
 //>> User Dashboard <<//
-@import "user-dashboard";
-
+@import "dashboard";
+// >> Order History <<//
+@import "order-history";
 //>> Template Section Style End <<//
